--- a/Chapter6.ipynb
+++ b/Chapter6.ipynb
@@ -142,17 +142,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Gives us a result very close to the actual odds of 2/3"
+    "Gives us a result close to the actual odds of 2/3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A Poker Problem\n",
+    "What is the chance that the first five cards chosen from a deck of 52 cards will contain two (and only two) cards of the same denomination (two 3’s for example)?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "deck = [1,2,3,4,5,6,7,8,9,10,11,12,13] * 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The chance of getting just one pair in the first 5 cards dealt is 0.42208.\n"
+     ]
+    }
+   ],
+   "source": [
+    "NUM_TRIALS = 100000\n",
+    "num_pairs = []\n",
+    "\n",
+    "for _ in range(NUM_TRIALS):\n",
+    "    (_, pairs) = np.unique(np.random.choice(deck, 5, replace=False), return_counts=True)\n",
+    "    num_pairs.append(np.sum(pairs == 2))\n",
+    "\n",
+    "num_one_pair = np.sum(np.array(num_pairs) == 1)\n",
+    "print('The chance of getting just one pair in the first 5 cards dealt is {}.'.format(num_one_pair / NUM_TRIALS))"
+   ]
   }
  ],
  "metadata": {
